Remove FELIX-5527 workaround
This removes the workaround that was required to avoid FELIX-5527. This
commit also corrects any incorrect package exports, and ensures that
module descriptors are also imported from dependency jars.

--- a/org.lwjgl.egl/pom.xml
+++ b/org.lwjgl.egl/pom.xml
@@ -120,10 +120,8 @@
                   org.lwjgl.system.*
                 </Import-Package>
 
-                <!-- Do not include Java 9 classes from META-INF due to -->
-                <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-egl;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-egl;classifier=!sources;inline=!*.jar
                 </Embed-Dependency>
 
                 <Export-Package>
