--- a/org.lwjgl.remotery/pom.xml
+++ b/org.lwjgl.remotery/pom.xml
@@ -222,14 +222,12 @@
                   org.lwjgl.system.*
                 </Import-Package>
 
-                <!-- Do not include Java 9 classes from META-INF due to -->
-                <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-remotery;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-remotery;classifier=!sources;inline=!*.jar
                 </Embed-Dependency>
 
                 <Export-Package>
-                  org.lwjgl.remotery
+                  org.lwjgl.util.remotery
                 </Export-Package>
 
                 <Include-Resource>
