--- a/org.lwjgl.glfw/pom.xml
+++ b/org.lwjgl.glfw/pom.xml
@@ -242,10 +242,8 @@
                   org.lwjgl.egl; resolution:="optional"
                 </Import-Package>
 
-                <!-- Do not include Java 9 classes from META-INF due to -->
-                <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-glfw;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-glfw;classifier=!sources;inline=!*.jar
                 </Embed-Dependency>
 
                 <Export-Package>
@@ -264,6 +262,9 @@
                   osname=Win32; processor=x86-64,
 
                   libglfw.so;
+                  osname=Linux; processor=x86-64,
+
+                  libglfw_wayland.so;
                   osname=Linux; processor=x86-64,
 
                   libglfw.dylib;
