--- a/org.lwjgl.opengles/pom.xml
+++ b/org.lwjgl.opengles/pom.xml
@@ -232,10 +232,8 @@
                   org.lwjgl.egl
                 </Import-Package>
 
-                <!-- Do not include Java 9 classes from META-INF due to -->
-                <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-opengles;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-opengles;classifier=!sources;inline=!*.jar
                 </Embed-Dependency>
 
                 <Export-Package>
