--- a/org.lwjgl.zstd/pom.xml
+++ b/org.lwjgl.zstd/pom.xml
@@ -222,14 +222,12 @@
                   org.lwjgl.system.*
                 </Import-Package>
 
-                <!-- Do not include Java 9 classes from META-INF due to -->
-                <!-- https://issues.apache.org/jira/browse/FELIX-5527 -->
                 <Embed-Dependency>
-                  artifactId=lwjgl-zstd;classifier=!sources;inline=!META-INF/**/*.class
+                  artifactId=lwjgl-zstd;classifier=!sources;inline=!*.jar
                 </Embed-Dependency>
 
                 <Export-Package>
-                  org.lwjgl.zstd
+                  org.lwjgl.util.zstd
                 </Export-Package>
 
                 <Include-Resource>
