Correct the org.lwjgl.lwjgl module descriptor
The module descriptor from one of the natives artifacts was being
accidentally copied over the original LWJGL module descriptor.

Using the original LWJGL module descriptor does introduce
one limitation: The original module did not contain an
org.lwjgl.system.jemalloc package. This package was normally
provided by the lwjgl-jemalloc module. However, due to an effective
circular dependency aggravated by OSGi's classloader model
(described in ticket #10), it was necessary to merge the lwjgl
and lwjgl-jemalloc modules to produce working OSGi bundles. This
means that the org.lwjgl.system.jemalloc package now exists in the
org.lwjgl.lwjgl bundle but, due to using the original lwjgl module
descriptor unmodified, the org.lwjgl.system.jemalloc package is not
exported. This doesn't appear to be a problem as user code should not
be using that package directly, but it does represent a compatibility
difference between these OSGi bundles and the original LWJGL modules.

Mark 3.2.1.1.

Fix #10

--- a/org.lwjgl.lwjgl/pom.xml
+++ b/org.lwjgl.lwjgl/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.lwjgl.osgi</groupId>
     <artifactId>org.lwjgl.parent</artifactId>
-    <version>3.2.1</version>
+    <version>3.2.1.1</version>
   </parent>
 
   <packaging>bundle</packaging>
@@ -287,6 +287,26 @@
               <markersDirectory>${project.build.directory}/unpack-source-markers</markersDirectory>
             </configuration>
           </execution>
+
+          <execution>
+            <id>unpack-module-descriptor</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <overWriteReleases>true</overWriteReleases>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.lwjgl</groupId>
+                  <artifactId>lwjgl</artifactId>
+                </artifactItem>
+              </artifactItems>
+              <includes>**\/module-info.class</includes>
+              <outputDirectory>${project.build.directory}/unpacked-module</outputDirectory>
+              <markersDirectory>${project.build.directory}/unpacked-module-markers</markersDirectory>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
 
@@ -348,19 +368,20 @@
                   sun.misc
                 </Import-Package>
 
-                <Embed-Dependency>
-                  artifactId=lwjgl;classifier=!sources;inline=**/*.class,
-                  artifactId=lwjgl-jemalloc;classifier=!sources;inline=**/*.class
-                </Embed-Dependency>
-
                 <Export-Package>
                   org.lwjgl,
                   org.lwjgl.system,
                   org.lwjgl.system.*
                 </Export-Package>
 
+                <Embed-Dependency>
+                  artifactId=lwjgl-jemalloc;classifier=!sources;inline=**/*.class,
+                  artifactId=lwjgl;classifier=!sources;inline=**/*.class
+                </Embed-Dependency>
+
                 <Include-Resource>
-                  ${project.build.directory}/unpacked/
+                  ${project.build.directory}/unpacked/,
+                  ${project.build.directory}/unpacked-module/
                 </Include-Resource>
 
                 <Bundle-NativeCode>
