--- a/org.lwjgl.glfw/pom.xml
+++ b/org.lwjgl.glfw/pom.xml
@@ -257,6 +257,7 @@
                   org.lwjgl,
                   org.lwjgl.system,
                   org.lwjgl.system.*,
+                  sun.misc,
 
                   org.lwjgl.vulkan; resolution:="optional",
                   org.lwjgl.egl; resolution:="optional"
