--- a/org.lwjgl.nfd/pom.xml
+++ b/org.lwjgl.nfd/pom.xml
@@ -243,7 +243,8 @@
                   <!-- Add explicit imports for LWJGL -->
                   org.lwjgl,
                   org.lwjgl.system,
-                  org.lwjgl.system.*
+                  org.lwjgl.system.*,
+                  sun.misc
                 </Import-Package>
 
                 <Embed-Dependency>
